--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,16 +24,6 @@ spec:
         volumeMounts:
           - name:  data-volume
             mountPath:  /data
-      - name: prepare-debugtool
-        image: debugtool:0.1
-        command: ["sh", -c]
-        args:
-          - cp
-            /data/app
-            /home
-        volumeMounts:
-          - name:  data-volume
-            mountPath:  /data
       containers:
       - name: app
         image: testapp:0.1
@@ -49,7 +39,11 @@ spec:
             ephemeral-storage: "200Mi"
       - name: debugtool
         image: debugtool:0.1
-        command: ["/bin/bash", "-c", "while true; do sleep 3600; done"]
+        command: ["/bin/bash", "-c"] 
+        args:
+          - cp /data/app /home;
+            trap 'echo end debugtool; exit 0' 1 2 3 15;
+            while true; do sleep 5; done
         resources:
           requests:
             cpu: 100m
